Created Front end setup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>TodoWithSearchBar</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -10,6 +11,13 @@
   </head>
 
   <body>
-    <%= yield %>
+    <%= render "layouts/NavBar" %>
+    <%= render "layouts/flash" %>
+    
+     <div class="container">
+      <%= yield %>
+    </div>
+    
+    <%= render "layouts/footer" %>
   </body>
 </html>
