--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,15 @@
-<h1>Home Page</h1>
-<p>This Is the Home Page</p>
+<div class="center jumbotron">
+  <h1 class="pull-left">To Do List with Search bar</h1>
+</div>
+
+
+<div class="well">
+ <h4 class="text center home-text">Hello and welcome to the To Do app. This is just like a Chores list 
+ you create at home where you can add a chore and delete it once its done Give it a try!!</h4>
+</div>
+
+<div class="container">
+    <div>
+      <p><%= link_to "Create a Todo", new_todo_path, class: "btn btn-default btn-lg fancy" %></p>
+    </div>
+</div>
