--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="center jumbotron">
+<div class="center jumbotron mt-2">
   <h1 class="pull-left">To Do List with Search bar</h1>
 </div>
 
@@ -9,7 +9,7 @@
 </div>
 
 <div class="container">
-    <div>
+    <div class="text-center mt-3">
       <p><%= link_to "Create a Todo", new_todo_path, class: "btn btn-default btn-lg fancy" %></p>
     </div>
 </div>
