--- a/app/views/todos/_form.html.erb
+++ b/app/views/todos/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-12">
+  <div class="col-md-12 offset-2 mt-3">
           <%#= form_for(@todo, :html => {class: "form-horizontal", role: "form"}) do |f| %>
           <%#= form_with(model: @todo, :html => {class: "form-horizontal", role: "form"}) do |f| %>
           <%= form_with scope: :todo, url: todos_path, local: true, class: "form-horizontal", role: "form" do |f| %>
