--- a/app/views/layouts/_NavBar.html.erb
+++ b/app/views/layouts/_NavBar.html.erb
@@ -1,24 +1,27 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <nav>
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>                        
-          </button>
-          <div class="collapse navbar-collapse" id="myNavbar">
-          <ul class="nav navbar-nav navbar-left">
-            <li><%= link_to "Home", root_path %></li>
-            <li><%#= link_to "Help", help_path   %></li>
-            <!-- <li class="divider"></li> -->
-          </ul>
-         
-          <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Create a To Do", new_todo_path %></li>
-            <li><%= link_to "To Do List", todos_path %></li>
-          </ul> 
-          </div>
-        </nav>
-      </div>
-    
-  </header>
+<nav class="navbar navbar-dark navbar-expand-md bg-dark justify-content-between">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="navbar-collapse collapse dual-nav w-100 ">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+    <%= link_to 'Home', root_path, class: "btn btn btn-outline-light " %>
+    </li>
+
+  </ul>
+    </div>
+      <a href="/" class="navbar-brand mx-auto d-block text-center w-100 logo-name"><h3>Todo List</h3></a>
+    <div class="navbar-collapse collapse dual-nav w-100">
+      <ul class="nav navbar-nav ml-auto">
+      <%# if logged_in? %>
+      <li class="nav-item"> <%= link_to 'Todo List', todos_path, class: "btn btn btn-outline-light " %></li>
+      <li class="nav-item"> <%= link_to 'Create Todo', new_todo_path, class: "btn btn btn-outline-light ml-2" %></li>
+      <%# end %>
+      <%# if current_user %> 
+      <li><%#= link_to "Log Out", login_path, method: :delete, class: "btn btn-default" %></li>
+      <%# else %>
+      <li><%#= link_to "Log in", login_path, class: "btn btn-default" %></li>
+      <%# end %>
+    </ul>
+  </div>
+</nav>
