--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,12 +1,9 @@
-<div class="container">
-  <div class="center">
-  </div>
   <div class="row">
-    <h1 class="text-center">To Do List</h1>
-    <div class="col-md-8 col-md-offset-2">
-        <p>
-          <%= link_to "Create a To Do", new_todo_path, class: "btn btn-success" %>
-        </p>
+    <h1 class="mx-auto">To Do List</h1>
+  </div>
+    
+    <div class="col-md-6 offset-md-3">
+        
           <table class="row">
             <tr>
               <th>Name</th>
@@ -24,4 +21,3 @@
         </table>
     </div>
   </div>
-</div>
