--- a/app/views/todos/new.html.erb
+++ b/app/views/todos/new.html.erb
@@ -1,5 +1,5 @@
-<div class="row">
-  <h2 class="text-center new-page-text">Create an New To do</h2>
+<div class="row mt-3">
+  <h2 class="mx-auto">Create an New To do</h2>
 </div>
 
 <% render "todos/errors" %>
