Set up Search bar view pages

--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -3,21 +3,22 @@
   </div>
     
     <div class="col-md-6 offset-md-3">
-        
+      <%= render "todos/my_todos"%>
+        <!-- 
           <table class="row">
             <tr>
               <th>Name</th>
               <th>Description</th>
             </tr>
-            <% @todos.each do |todo| %>
+            <%# @todos.each do |todo| %>
               <tr> 
-                <td class="texties"><%= todo.name %></td>
-                <td class="texties"><%= todo.description %></td>
-                <td><%= link_to "Edit", edit_todo_path(todo), class: "btn btn-warning bttn" %></td>
-                <td><%= link_to "View", todo_path(todo), class: "btn btn-info bttn" %></td>
-                <td><%= link_to "Delete", todo_path(todo), method: :delete, data: {confirm: "Are you sure??"}, class: "btn btn-danger bttn" %></td>
+                <td class="texties"><%#= todo.name %></td>
+                <td class="texties"><%#= todo.description %></td>
+                <td><%#= link_to "Edit", edit_todo_path(todo), class: "btn btn-warning bttn" %></td>
+                <td><%#= link_to "View", todo_path(todo), class: "btn btn-info bttn" %></td>
+                <td><%#= link_to "Delete", todo_path(todo), method: :delete, data: {confirm: "Are you sure??"}, class: "btn btn-danger bttn" %></td>
             </tr>
-          <% end %>
-        </table>
+          <%# end %>
+        </table> -->
     </div>
   </div>
