Completed Controller and View setup

--- a/app/views/todos/_my_todos.html.erb
+++ b/app/views/todos/_my_todos.html.erb
@@ -20,8 +20,9 @@
 
 </div>
 
-<% if !@todos.empty? %>
-  <%= render 'todos/todo_result' %>
-  <% else %>
-  <h4>You have no Todos..</h4>
-<% end %>
+<%# if !@todos.empty? %>
+  <%#= render 'todos/todo_result' %>
+  <%# else %>
+ <!-- <h4>You have no Todos..</h4> -->
+<%# end %>
+
