--- a/app/views/todos/_todo_result.js.erb
+++ b/app/views/todos/_todo_result.js.erb
@@ -1,1 +1,1 @@
-document.querySelector('#todo-results').innerHTML = "<%= j render 'users/todo_result.html' %>"
+document.querySelector('#todo-results').innerHTML = "<%= j render 'todos/todo_result.html' %>"
