--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -47,82 +47,7 @@ textarea {
   border-radius: 7px;
 }
 
-.fancy {
-  background-color: #5C606B;
-  color: white;
-  
-}
-
-.fancy:hover {
-  background-color: #CBD1DC;
-  color: white;
-}
-
-.home-text {
-  font-family: bookman body copy;
-}
-
-/* New Page */
-
-.new-page-text {
-  margin-bottom: 80px;
-}
-
-/* The Wells */
-
-.well.profile-black-white {
-    background-color: #ffffff;
-    border: 9px solid black;
-    border-radius: 25px;
-}
-
-.well.profile-black-white-thin {
-    background-color: #ffffff;
-    border: 1px solid black;
-    border-radius: 25px;
-}
-
-.well.profile-black-white-thin-b {
-    background-color: #e6f7ff;
-    border: 1px solid black;
-    border-radius: 25px;
-}
-
-
-/* Name and Description Tags */
-
-.name {
-  text-align: justify;
-  color: red;
-}
-
-/* Index page */
-
-.spacer {
-  visibility: hidden;
-}
-
-.bttn {
-  border: 2px solid white;
-}
-
-.texties {
-  font-family: arial;
-}
-
-/* Show Page */
-.descriptionText {
-  font-weight: bold;
-  font-size: 16px;
-}
-
-
-.removedot {
-  list-style-type: none;
-  color: #004085;
-  background-color: #cce5ff;
-  border: 2px;
-  border-color: #004085;
-  border-radius: 2px;
-  padding-left: 5px;
+.results-block {
+  display: inline-block;
+  margin-bottom: 1rem;
 }
