--- a/app/views/layouts/_NavBar.html.erb
+++ b/app/views/layouts/_NavBar.html.erb
@@ -14,7 +14,7 @@
     <div class="navbar-collapse collapse dual-nav w-100">
       <ul class="nav navbar-nav ml-auto">
       <%# if logged_in? %>
-      <li class="nav-item"> <%= link_to 'Todo List', todos_path, class: "btn btn btn-outline-light " %></li>
+      <li class="nav-item"> <%= link_to 'Search Todos', todos_path, class: "btn btn btn-outline-light " %></li>
       <li class="nav-item"> <%= link_to 'Create Todo', new_todo_path, class: "btn btn btn-outline-light ml-2" %></li>
       <%# end %>
       <%# if current_user %> 
