--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,17 @@
 <div class="center jumbotron mt-2">
-  <h1 class="pull-left">To Do List with Search bar</h1>
+  <h1>To Do List with Search bar</h1>
 </div>
 
 
-<div class="well">
- <h4 class="text center home-text">Hello and welcome to the To Do app. This is just like a Chores list 
- you create at home where you can add a chore and delete it once its done Give it a try!!</h4>
+<div>
+ <h4 >Hello and welcome to the To Do app. This is just like a Chores list 
+ you create at home where you can add a chore and delete it once its done.</h4>
+ <h4>This also contains a Search bar where you can look up a specific Todo</h4>
+ <h4 class="text center">Give it a Try!!</h4>
 </div>
 
 <div class="container">
     <div class="text-center mt-3">
-      <p><%= link_to "Create a Todo", new_todo_path, class: "btn btn-default btn-lg fancy" %></p>
+      <p><%= link_to "Create a Todo", new_todo_path, class: "btn btn-outline-dark btn-lg" %></p>
     </div>
 </div>
