--- a/app/views/todos/_todo_result.html.erb
+++ b/app/views/todos/_todo_result.html.erb
@@ -4,14 +4,14 @@
 
 <% if @todos %>
    <!-- <div class="card card-header results-block"> -->
-    <table class="col-md-12">
+    <table class="col-md-10">
       <tbody>
         <% @todos.each do |todo| %>
-          <tr class="card card-header results-block">
+          <tr class="card card-header results-block mb-1">
             <td><strong>Name: </strong> <%= todo.name %></td>
-              <td><strong>Email: </strong> <%= todo.description %></td>
-              <td></td>
-              <td><%= link_to "View #{todo.name}'s Details", todo_path(todo),
+              <td class="mt-1"><strong>Email: </strong> <%= todo.description %></td>
+             
+              <td class="mt-1"><%= link_to "View #{todo.name}'s Details", todo_path(todo),
                                             class: "btn btn-primary btn-sm " %>
               </td>
           </tr>
