--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,24 +1,12 @@
-  <div class="row">
-    <h1 class="mx-auto">To Do List</h1>
+  
+  <div class="row mt-2">
+    <h1 class="mx-auto">Search Todos</h1>
   </div>
     
-    <div class="col-md-6 offset-md-3">
+    <div class="col-md-8 offset-md-3">
       <%= render "todos/my_todos"%>
-        <!-- 
-          <table class="row">
-            <tr>
-              <th>Name</th>
-              <th>Description</th>
-            </tr>
-            <%# @todos.each do |todo| %>
-              <tr> 
-                <td class="texties"><%#= todo.name %></td>
-                <td class="texties"><%#= todo.description %></td>
-                <td><%#= link_to "Edit", edit_todo_path(todo), class: "btn btn-warning bttn" %></td>
-                <td><%#= link_to "View", todo_path(todo), class: "btn btn-info bttn" %></td>
-                <td><%#= link_to "Delete", todo_path(todo), method: :delete, data: {confirm: "Are you sure??"}, class: "btn btn-danger bttn" %></td>
-            </tr>
-          <%# end %>
-        </table> -->
     </div>
   </div>
+
+
+  
