--- a/app/views/todos/show.html.erb
+++ b/app/views/todos/show.html.erb
@@ -1,10 +1,12 @@
 <% render "todos/errors" %>
 
-<div class="container">
+
   <div class="row">
+  <div class="col-md-12">
     <h2 class="text-center">My To Do</h2>
-    <div class="col-md-4 col-md-offset-4">
-      <div class="well">
+    </div>
+      <div class="col-md-8 offset-2 mt-4">
+        <div class="card card-body">
         <p><span class="descriptionText">Name:</span> <%= @todo.name %></p>
           <br />
           <p><span class="descriptionText">Description:</span> <%= @todo.description %></p>
@@ -13,6 +15,6 @@
             <%= link_to "Back to Index", todos_path, class: "btn btn-warning" %>
           </p>
       </div>
-    </div>
-</div>
+      </div>
+    
 </div>
