Resolved error in todos count conditional statement

--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -2,7 +2,7 @@
   <div class="col-md-10 col-md-offset-1">
     <% flash.each do |name, msg| %>
       <div class="alert alert-<%= name %>">
-        <a href="#" class="close" data-dismiss="alert">&#215;</a>
+        <a href="#" class="close ml-2" data-dismiss="alert">&#215;</a>
         <%= msg %>
       </div>
     <% end %>
