--- a/app/views/todos/_todo_result.html.erb
+++ b/app/views/todos/_todo_result.html.erb
@@ -7,16 +7,21 @@
     <table class="col-md-10">
       <tbody>
         <% @todos.each do |todo| %>
-          <tr class="card card-header results-block mb-1">
-            <td><strong>Name: </strong> <%= todo.name %></td>
-              <td class="mt-1"><strong class="ml-2">Email: </strong> <%= todo.description %></td>
+          <tr class="card card-header results-block mb-1 todo-description">
+            <td class="name-text"><strong>Name: </strong> <%= todo.name %></td>
+            
+          </tr>
+          <tr class="card card-header results-block todo-description">
+              <td class="mt-1"><strong class="ml-2 ">Todo: </strong> <%= todo.description %></td>
              
               <td class="mt-1"><%= link_to "View #{todo.name}'s Details", todo_path(todo),
                                             class: "btn btn-outline-primary btn-sm ml-2" %>
               </td>
           </tr>
+         
         <% end %>
       </tbody>
+    
     </table>
   <!-- </div> -->
  <% end %> 
