--- a/app/views/layouts/_NavBar.html.erb
+++ b/app/views/layouts/_NavBar.html.erb
@@ -14,8 +14,8 @@
     <div class="navbar-collapse collapse dual-nav w-100">
       <ul class="nav navbar-nav ml-auto">
       <%# if logged_in? %>
-      <li class="nav-item"> <%= link_to 'Search Todos', todos_path, class: "btn btn btn-outline-light " %></li>
-      <li class="nav-item"> <%= link_to 'Create Todo', new_todo_path, class: "btn btn btn-outline-light ml-2" %></li>
+      <li class="nav-item right"> <%= link_to 'Search Todos', todos_path, class: "btn btn btn-outline-light " %></li>
+      <li class="nav-item right"> <%= link_to 'Create Todo', new_todo_path, class: "btn btn btn-outline-light ml-2" %></li>
       <%# end %>
       <%# if current_user %> 
       <li><%#= link_to "Log Out", login_path, method: :delete, class: "btn btn-default" %></li>
